--- a/app/src/main/res/layout/marker_view.xml
+++ b/app/src/main/res/layout/marker_view.xml
@@ -19,6 +19,7 @@
         android:textSize="8sp"
         android:textColor="@color/dark_purple"
         android:ellipsize="end"
+        android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
