--- a/app/src/main/res/layout/dialog_daily_questionnaire.xml
+++ b/app/src/main/res/layout/dialog_daily_questionnaire.xml
@@ -91,7 +91,7 @@
             android:padding="10dp"
             android:visibility="gone"
             android:layout_gravity="center_horizontal"
-            android:hint="Amount of words (number)"
+            android:hint="Words per minute"
             android:inputType="number"
             android:minHeight="48dp"
             android:layout_marginVertical="10dp"
