--- a/app/src/main/res/layout/dialog_daily_questionnaire.xml
+++ b/app/src/main/res/layout/dialog_daily_questionnaire.xml
@@ -141,7 +141,7 @@
             android:padding="5dp"
             android:visibility="visible"
             android:layout_gravity="center_horizontal"
-            android:hint="If yes, please explain here."
+            android:hint="Please explain here."
             android:layout_marginVertical="10dp"
             android:inputType="textCapSentences|textMultiLine"
             android:maxLength="2000"
@@ -159,7 +159,7 @@
             android:padding="5dp"
             android:visibility="gone"
             android:layout_gravity="center_horizontal"
-            android:hint="If yes, explain what?"
+            android:hint="Please explain here."
             android:layout_marginVertical="10dp"
             android:inputType="textCapSentences|textMultiLine"
             android:maxLength="3000"
