--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -50,6 +50,7 @@
 
     <PreferenceCategory app:title="@string/help">
         <EditTextPreference
+            app:key="@string/contact"
             app:summary="@string/contact_info"/>
 
     </PreferenceCategory>
