--- a/app/src/main/res/layout/dialog_daily_questionnaire.xml
+++ b/app/src/main/res/layout/dialog_daily_questionnaire.xml
@@ -137,7 +137,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:background="@drawable/roundstyle"
-            android:textSize="12dp"
+            android:textSize="12sp"
             android:padding="5dp"
             android:visibility="visible"
             android:layout_gravity="center_horizontal"
@@ -155,7 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:background="@drawable/roundstyle"
-            android:textSize="12dp"
+            android:textSize="12sp"
             android:padding="5dp"
             android:visibility="gone"
             android:layout_gravity="center_horizontal"
