--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:background">@drawable/border_selected</item>
         <item name="android:gravity">center</item>
         <item name="android:textAlignment">center</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:paddingHorizontal">5dp</item>
     </style>
 </resources>
