--- a/app/src/main/res/layout/sleep_data_card.xml
+++ b/app/src/main/res/layout/sleep_data_card.xml
@@ -94,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Wakeup"
+                android:text="@string/wakeup"
                 android:fontFamily="@font/roboto"
                 android:layout_column="0"
                 android:textAlignment="center"
@@ -106,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_column="1"
-                android:text="Time asleep"
+                android:text="@string/time_asleep"
                 android:textAlignment="center"
                 android:textColor="@color/light_grey"
                 android:textSize="16sp"
@@ -158,7 +158,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingVertical="5dp"
-                    android:text="Bedtime"
+                    android:text="@string/bedtime"
                     android:fontFamily="@font/roboto"
                     android:textColor="@color/light_grey"
                     android:textSize="16sp"
