--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -68,6 +68,7 @@
         android:layout_gravity="center"
         android:hint="Your Prolific ID"
         android:inputType="text"
+        android:textSize="14sp"
         android:minHeight="48dp"
         android:padding="8dp" />
 
@@ -75,10 +76,10 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your prolific ID is used to verify your identity after the study is concluded."
+        android:text="@string/prolific_id_is_used_to_verify"
         android:textColor="@color/muted_purple"
-        android:textSize="18sp"
-        android:padding="20dp"
+        android:textSize="16sp"
+        android:padding="10dp"
         android:textAlignment="center" />
 
     <TextView
@@ -87,7 +88,7 @@
         android:layout_height="wrap_content"
         android:text="@string/save_user_info_consent"
         android:textColor="@color/light_purple"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:padding="20dp"
         android:textAlignment="center" />
 
