--- a/app/src/main/res/layout/dialog_daily_questionnaire.xml
+++ b/app/src/main/res/layout/dialog_daily_questionnaire.xml
@@ -28,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
+            android:textColor="@color/dark_grey"
             android:padding="8dp"
             android:text="Q1: Yesterday I had to correct my typing more than normally."
             />
@@ -43,12 +44,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minHeight="32dp"
+                android:textColor="@color/dark_grey"
                 android:text="@string/likert_1"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <RadioButton
                 android:id="@+id/likertScale2"
                 android:layout_width="wrap_content"
+                android:textColor="@color/dark_grey"
                 android:layout_height="wrap_content"
                 android:text="@string/likert_2"
                 tools:ignore="TouchTargetSizeCheck" />
@@ -56,6 +59,7 @@
             <RadioButton
                 android:id="@+id/likertScale3"
                 android:layout_width="wrap_content"
+                android:textColor="@color/dark_grey"
                 android:layout_height="wrap_content"
                 android:text="@string/likert_3"
                 tools:ignore="TouchTargetSizeCheck" />
@@ -63,6 +67,7 @@
             <RadioButton
                 android:id="@+id/likertScale4"
                 android:layout_width="wrap_content"
+                android:textColor="@color/dark_grey"
                 android:layout_height="wrap_content"
                 android:text="@string/likert_4"
                 tools:ignore="TouchTargetSizeCheck" />
@@ -70,6 +75,7 @@
             <RadioButton
                 android:id="@+id/likertScale5"
                 android:layout_width="wrap_content"
+                android:textColor="@color/dark_grey"
                 android:layout_height="wrap_content"
                 android:text="@string/likert_5"
                 tools:ignore="TouchTargetSizeCheck" />
@@ -77,6 +83,7 @@
             <RadioButton
                 android:id="@+id/likertScale6"
                 android:layout_width="wrap_content"
+                android:textColor="@color/dark_grey"
                 android:layout_height="wrap_content"
                 android:text="@string/likert_6"
                 tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
@@ -85,6 +92,7 @@
                 android:id="@+id/likertScale7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/dark_grey"
                 android:text="@string/likert_7"
                 tools:ignore="TouchTargetSizeCheck" />
         </RadioGroup>
@@ -95,6 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="50dp"
+            android:textColor="@color/dark_grey"
             android:background="@drawable/roundstyle"
             android:ems="10"
             android:padding="10dp"
@@ -108,6 +117,7 @@
 
         <NumberPicker
             android:id="@+id/number_picker"
+            android:textColor="@color/dark_grey"
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:layout_margin="10dp"
@@ -130,12 +140,14 @@
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/dark_grey"
             android:id="@+id/yesBtn"
             android:text="@string/yes"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/dark_grey"
             android:id="@+id/noBtn"
             android:text="@string/no"/>
         </RadioGroup>
@@ -144,6 +156,7 @@
             android:id="@+id/explainAnswer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/dark_grey"
             android:layout_marginHorizontal="30dp"
             android:background="@drawable/roundstyle"
             android:textSize="12sp"
@@ -161,6 +174,7 @@
         <EditText
             android:id="@+id/openAnswer"
             android:layout_width="match_parent"
+            android:textColor="@color/dark_grey"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
             android:background="@drawable/roundstyle"
